<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_title">

    <EditTextPreference
        android:defaultValue="@string/settings_edit_text_default"
        android:inputType="text"
        android:key="@string/settings_edit_text_key"
        android:title="@string/settings_edit_text_label"
        android:hint="@string/settings_edit_text_hint"/>

    <ListPreference
        android:defaultValue="@string/settings_order_by_default"
        android:entries="@array/settings_order_by_labels"
        android:entryValues="@array/settings_order_by_values"
        android:key="@string/settings_order_by_key"
        android:title="@string/settings_order_by_label" />

    <EditTextPreference
        android:defaultValue="@string/settings_article_number_default"
        android:inputType="numberDecimal"
        android:key="@string/settings_article_number_key"
        android:selectAllOnFocus="true"
        android:title="@string/settings_article_number_label" />

</PreferenceScreen>