<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/news_item_section"
            style="@style/SectionStyle"
            tools:text="@string/tag_section" />

        <TextView
            android:id="@+id/news_item_title"
            style="@style/TitleStyle"
            tools:text="@string/tag_item_title" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:orientation="vertical"
        android:paddingRight="12dp">

        <TextView
            android:id="@+id/textview_date"
            style="@style/DateStyle"
            tools:text="@string/tag_date" />

        <TextView
            style="@style/DetailsStyle"
            android:text="@string/contributor" />

        <TextView
            android:id="@+id/textview_author"
            style="@style/DetailsStyle"
            tools:text="@string/tag_author" />

    </LinearLayout>
</LinearLayout>